tests/error/gt_type.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a int@5
move GF@b string@a
GT GF@a GF@a GF@b